--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                     <div class="col-xl-5 col-lg-6">
                         <div class="header-content-right">
                             <h4 class="sub-title">Hello, I’m</h4>
-                            <h1 class="title">Mark Parker</h1>
-                            <p>A Freelance UI Designer & Web Developer</p>
+                            <h1 class="title">Ali Khalafnejad</h1>
+                            <p>A Freelance Software Engineer & Web Developer</p>
                             <a class="main-btn" href="#work">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
@@ -192,7 +192,7 @@
                                         <i class="lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Email:</span> parker@mysite.com</p>
+                                        <p><span>Email:</span> a.kh.f1994@gmail.com</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -202,7 +202,7 @@
                                         <i class="lni-phone-handset"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Phone:</span> +1-202-555-0138</p>
+                                        <p><span>Phone:</span> +98-910-637-9155</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
